# cpp_serial

./: CMakeLists.txt  Makefile  README.md
cmake/: serialConfig.cmake.in
examples/: ping_pong.cc  pong_ping.cc  serial_receiver.cc  serial_sender.cc
tests/: CMakeLists.txt
